[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Vladislav Radchenko <vradchenko@callpanda.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
pydantic = "^1.9.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
